# create_google_cal

./: .gitignore  README.md  creds.py  july28.csv  main.py  main1.py  pyproject.toml
archive/: gcreate.py  hello.py  mainold.py
src/: gcal.py
src/create_google_cal/: auth.py  calendar_manager.py  main.py  utils.py
